[metadata]
name = warmup_scheduler_pytorch
version = attr: warmup_scheduler_pytorch.warmup_module.VERSION
author = LEFTeyes
author_email = 1079316858@qq.com
description = A Warmup Scheduler for Pytorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LEFTeyex/warmup
project_urls =
    Bug Tracker = https://github.com/LEFTeyex/warmup/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    torch >= 1.7.1


[options.packages.find]
where = src
include = warmup_scheduler_pytorch*
excluded =
    __init__.py